<?xml version="1.0"?>
<package>
	<name>prm_planner</name>
	<version>0.0.0</version>
	<description>The prm_planner package</description>

	<!-- One maintainer tag required, multiple allowed, one person per tag -->
	<!-- Example: -->
	<!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
	<maintainer email="kuhnerd@todo.todo">kuhnerd</maintainer>


	<!-- One license tag required, multiple allowed, one license per tag -->
	<!-- Commonly used license strings: -->
	<!-- BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
	<license>TODO</license>


	<!-- Url tags are optional, but mutiple are allowed, one per tag -->
	<!-- Optional attribute type can be: website, bugtracker, or repository -->
	<!-- Example: -->
	<!-- <url type="website">http://wiki.ros.org/prm_planner</url> -->


	<!-- Author tags are optional, mutiple are allowed, one per tag -->
	<!-- Authors do not have to be maintianers, but could be -->
	<!-- Example: -->
	<!-- <author email="jane.doe@example.com">Jane Doe</author> -->


	<!-- The *_depend tags are used to specify dependencies -->
	<!-- Dependencies can be catkin packages or system dependencies -->
	<!-- Examples: -->
	<!-- Use build_depend for packages you need at compile time: -->
	<!-- <build_depend>message_generation</build_depend> -->
	<!-- Use buildtool_depend for build tool packages: -->
	<!-- <buildtool_depend>catkin</buildtool_depend> -->
	<!-- Use run_depend for packages you need at runtime: -->
	<!-- <run_depend>message_runtime</run_depend> -->
	<!-- Use test_depend for packages you need only for testing: -->
	<!-- <test_depend>gtest</test_depend> -->
	<buildtool_depend>catkin</buildtool_depend>
	<build_depend>roscpp</build_depend>
	<build_depend>geometric_shapes</build_depend>
	<build_depend>ais_definitions</build_depend>
	<build_depend>ais_util</build_depend>
	<build_depend>ais_ros</build_depend>
	<build_depend>ais_point_cloud</build_depend>
	<build_depend>octomap_msgs</build_depend>
	<build_depend>geometry_msgs</build_depend>
	<build_depend>nav_msgs</build_depend>
	<build_depend>eigen_conversions</build_depend>
	<build_depend>visualization_msgs</build_depend>
	<build_depend>interactive_markers</build_depend>
	<build_depend>prm_planner_robot</build_depend>
	<build_depend>prm_planner_controller</build_depend>
	<build_depend>prm_planner_constraints</build_depend>
	<build_depend>prm_planner_msgs</build_depend>
	<build_depend>fcl_wrapper</build_depend>
	<build_depend>actionlib</build_depend>
	<build_depend>dynamic_reconfigure</build_depend>

	<run_depend>roscpp</run_depend>
	<run_depend>geometric_shapes</run_depend>
	<run_depend>ais_definitions</run_depend>
	<run_depend>ais_util</run_depend>
	<run_depend>ais_ros</run_depend>
	<run_depend>ais_point_cloud</run_depend>
	<run_depend>geometry_msgs</run_depend>
	<run_depend>nav_msgs</run_depend>
	<run_depend>eigen_conversions</run_depend>
	<run_depend>visualization_msgs</run_depend>
	<run_depend>interactive_markers</run_depend>
	<run_depend>prm_planner_robot</run_depend>
	<run_depend>prm_planner_controller</run_depend>
	<run_depend>prm_planner_constraints</run_depend>
	<run_depend>prm_planner_msgs</run_depend>
	<run_depend>fcl_wrapper</run_depend>
	<run_depend>actionlib</run_depend>
	<run_depend>dynamic_reconfigure</run_depend>

	<!-- The export tag contains other, unspecified, tags -->
	<export>
		<!-- Other tools can request additional information be placed here -->

	</export>
</package>
